# linky-mythic

./: .gitignore  Dockerfile  README.md  TODO.md  agent_capabilities.json  builder.go  commands_stub.go  config.json  go.mod  lib.rs  main.go  payload_type.go  run_tests.sh  setup_test_env.sh  test_integration.sh  todo.md
.claude/: settings.local.json
.github/workflows/: test.yml
Payload_Type/linky/: Dockerfile  go.sum  main.go
Payload_Type/linky/agent_code/links/common/src/: dispatch.rs  lib.rs
Payload_Type/linky/agent_code/links/linux/: Cargo.toml
Payload_Type/linky/agent_code/links/linux/src/: stdlib.rs
Payload_Type/linky/agent_code/links/osx/: Cargo.toml
Payload_Type/linky/agent_code/links/osx/src/: stdlib.rs
Payload_Type/linky/agent_code/links/windows/: build.rs
Payload_Type/linky/agent_code/links/windows/src/: main.rs  stdlib.rs
Payload_Type/linky/mythic/: payload_type.go
Payload_Type/linky/mythic/agent_functions/: builder.go  download.go  inject.go  integrity.go  ls.go  mkdir.go  pid.go  ps.go  pwd.go  shell.go  upload.go  utils.go
agent_code/: Cargo.toml
agent_code/links/common/: Cargo.toml
agent_code/links/common/src/: dispatch.rs  lib.rs
agent_code/links/linux/: Cargo.toml  build.rs
agent_code/links/linux/src/: main.rs  stdlib.rs
agent_code/links/osx/: Cargo.toml
agent_code/links/osx/src/: stdlib.rs
agent_code/links/windows/: Cargo.toml  build.rs
agent_code/links/windows/src/: main.rs  nt_inject.rs  stdlib.rs
mythic/: payload_type.go
mythic/agent_functions/: builder.go  cd.go  commands_stub.go  cp.go  download.go  execute.go  exit.go  info.go  inject.go  integrity.go  killdate.go  ls.go  mv.go  netstat.go  pid.go  ps.go  pwd.go  rm.go  shell.go  sleep.go  upload.go  whoami.go
