[package]
name = "link-common"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest    = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
base64     = "0.22"
rand       = "0.10"
aes-gcm    = "0.10"
sha2       = "0.11"
hex        = "0.4"
zeroize    = "1.8"
