[package]
name = "link-common"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest    = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
base64     = "0.22"
rand       = "0.10"
aes        = "0.8"
cbc        = "0.1"
hmac       = "0.12"
sha2       = "0.10"
hex        = "0.4"
zeroize    = "1"

