[package]
name = "link-windows"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "link-windows"
path = "src/main.rs"

[features]
default = []
indirect-syscalls = ["dep:syscalls"]

[dependencies]
link-common = { path = "../common" }
base64      = "0.22"
num_cpus    = "1.16"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
] }
winapi = { version = "0.3", features = ["memoryapi", "processthreadsapi", "winnt"] }
syscalls = { git = "https://github.com/Nariod/syscalls-rs", features = ["_INDIRECT_"], optional = true }
